--- a/src/app/reading-group/reading-group.component.html
+++ b/src/app/reading-group/reading-group.component.html
@@ -134,79 +134,6 @@
           <div class="item" fxLayout="column">
             <div fxLayout="row">
               <h3>
-                <a class="item-subtitle link-style-black" href="https://arxiv.org/abs/2102.07835"
-                   target="_blank">
-                  Topological Graph Neural Networks (ICLR 2022)
-                </a></h3>
-            </div>
-            <div fxLayout.gt-md="row" fxLayout="column" class="paragraph">
-              <div>
-                <fa-icon class="icon-right-margin" [icon]="calendar"></fa-icon>
-                31st of May 2022
-              </div>
-              <div>
-                <a>
-                  <fa-icon ngClass.gt-md="icon-right-margin--left" [icon]="authors"></fa-icon>
-                  Max Horn, Edward De Brouwer, Michael Moor, Yves Moreau, Bastian Rieck, Karsten Borgwardt
-                </a>
-              </div>
-            </div>
-            <div>
-              <iframe ngClass.gt-sm="float-right" [src]='safeURLTOGL' allowfullscreen></iframe>
-              <p class="paragraph">
-                <a class="slight-bold">Resources:</a>
-                (67 participants)
-              </p>
-              <p class="paragraph">
-                <a class="slight-bold">Speaker:</a>
-                First author <a
-                class="item-subtitle link-style-black"
-                href="https://scholar.google.com/citations?user=-Pm4XtAAAAAJ&hl"
-                target="_blank">Edward De Brouwer</a> who is a last year PhD student at KU Leuven, Belgium on machine
-                learning for
-                healthcare. His research focuses on developing robust and trustworthy methods for the clinical domain,
-                using neural differential equations, topological data analysis and causal inference, among others. In
-                2020-2021, he was a visiting researcher at ETH Zürich, where he worked on topological methods for graph
-                neural networks.
-              </p>
-              <p class="no-margin">
-                <a class="slight-bold">Abstract:</a>
-                Graph neural networks (GNNs) are a powerful architecture for tackling graph learning tasks, yet have
-                been
-                shown to be oblivious to eminent substructures such as cycles. We present TOGL, a novel layer that
-                incorporates global topological information of a graph using persistent homology. TOGL can be easily
-                integrated into any type of GNN and is strictly more expressive (in terms the Weisfeiler--Lehman graph
-                isomorphism test) than message-passing GNNs. Augmenting GNNs with TOGL leads to improved predictive
-                performance for graph and node classification tasks, both on synthetic data sets, which can be
-                classified
-                by humans using their topology but not by ordinary GNNs, and on real-world data.
-              </p>
-            </div>
-          </div>
-
-        </div>
-        <div fxFlex="10" fxFlex.xs="2"></div>
-      </div>
-    </div>
-
-    <div id="Schedule">
-      <div>
-        <div fxFlex="10" fxFlex.xs="2"></div>
-        <div fxFlex="80" fxFlex.xs="96" class="underline-title">
-          <h1 class="left-titles">SCHEDULE</h1>
-        </div>
-        <div fxFlex="10" fxFlex.xs="2"></div>
-      </div>
-
-
-      <div>
-        <div fxFlex="10" fxFlex.xs="2"></div>
-        <div fxFlex="80" fxFlex.xs="96" fxLayout="column">
-
-
-          <div class="item" fxLayout="column">
-            <div fxLayout="row">
-              <h3>
                 <a class="item-subtitle link-style-black" href="https://arxiv.org/abs/2206.01729"
                    target="_blank">
                   Torsional Diffusion for Molecular Conformer Generation
@@ -224,6 +151,12 @@
                 </a>
               </div>
             </div>
+            <div>
+              <iframe ngClass.gt-sm="float-right" [src]='safeURLtordiff' allowfullscreen></iframe>
+              <p class="paragraph">
+                <a class="slight-bold">Resources:</a>
+                (86 participants)
+              </p>
             <p class="paragraph">
               <a class="slight-bold">Speaker:</a>
               First authors <a
@@ -250,9 +183,30 @@
               magnitude fewer inference time-steps.
 
             </p>
+            </div>
           </div>
 
-          <hr ngClass.gt-sm="separator" ngClass.lt-md="separator--small">
+        </div>
+        <div fxFlex="10" fxFlex.xs="2"></div>
+      </div>
+    </div>
+
+    <div id="Schedule">
+      <div>
+        <div fxFlex="10" fxFlex.xs="2"></div>
+        <div fxFlex="80" fxFlex.xs="96" class="underline-title">
+          <h1 class="left-titles">SCHEDULE</h1>
+        </div>
+        <div fxFlex="10" fxFlex.xs="2"></div>
+      </div>
+
+
+      <div>
+        <div fxFlex="10" fxFlex.xs="2"></div>
+        <div fxFlex="80" fxFlex.xs="96" fxLayout="column">
+
+
+
           <div class="item" fxLayout="column">
             <div fxLayout="row">
               <h3>
@@ -498,7 +452,27 @@
             <div fxLayout.gt-md="row" fxLayout="column" class="paragraph">
               <div>
                 <fa-icon class="icon-right-margin" [icon]="calendar"></fa-icon>
-                24th of July 2022
+                5th of July 2022
+              </div>
+            </div>
+            <p class="paragraph">
+              <a class="slight-bold">Speaker:</a>
+              Maybe you? If you want to present a paper (doesn't have to be yours) or you have someone who might be
+              interested in presenting his work then just write me a message on
+              <a href="https://join.slack.com/t/logag/shared_invite/zt-u0mbo1ec-zElmvd1oSCXGjXvxLSokvg" target="_blank"
+                 class="link-style-green">Slack</a>
+              or via email!
+            </p>
+          </div>
+
+          <hr ngClass.gt-sm="separator" ngClass.lt-md="separator--small">
+          <div class="item" fxLayout="column">
+            <div fxLayout="row">
+            </div>
+            <div fxLayout.gt-md="row" fxLayout="column" class="paragraph">
+              <div>
+                <fa-icon class="icon-right-margin" [icon]="calendar"></fa-icon>
+                19th of July 2022
               </div>
             </div>
             <p class="paragraph">
@@ -514,7 +488,7 @@
             <div fxLayout.gt-md="row" fxLayout="column" class="paragraph">
               <div>
                 <fa-icon class="icon-right-margin" [icon]="calendar"></fa-icon>
-                24th of July 2022
+                26th of July 2022
               </div>
             </div>
             <p class="paragraph">
@@ -547,6 +521,63 @@
       <div>
         <div fxFlex="10" fxFlex.xs="2"></div>
         <div fxFlex="80" fxFlex.xs="96" fxLayout="column">
+
+          <div class="item" fxLayout="column">
+            <div fxLayout="row">
+              <h3>
+                <a class="item-subtitle link-style-black" href="https://arxiv.org/abs/2206.01729"
+                   target="_blank">
+                  Torsional Diffusion for Molecular Conformer Generation
+                </a></h3>
+            </div>
+            <div fxLayout.gt-md="row" fxLayout="column" class="paragraph">
+              <div>
+                <fa-icon class="icon-right-margin" [icon]="calendar"></fa-icon>
+                7th of June 2022
+              </div>
+              <div>
+                <a>
+                  <fa-icon ngClass.gt-md="icon-right-margin--left" [icon]="authors"></fa-icon>
+                  Bowen Jing, Gabriele Corso, Jeffrey Chang, Regina Barzilay, Tommi S. Jaakkola
+                </a>
+              </div>
+            </div>
+            <div>
+              <iframe ngClass.gt-sm="float-right" [src]='safeURLtordiff' allowfullscreen></iframe>
+              <p class="paragraph">
+                <a class="slight-bold">Resources:</a>
+                (86 participants)
+              </p>
+            <p class="paragraph">
+              <a class="slight-bold">Speaker:</a>
+              First authors <a
+              class="item-subtitle link-style-black"
+              href="https://gcorso.github.io/"
+              target="_blank">Gabriele Corso</a> and <a
+              class="item-subtitle link-style-black"
+              href="https://people.csail.mit.edu/bjing/"
+              target="_blank">Bowen Jing</a> who both are PhD students at MIT. Bowen is co-supervised by Prof. Tommi
+              Jaakkola and Prof. Bonnie Berger. Gabriele by Prof Jaakkola and Prof. Regina Barzilay.
+            </p>
+            <p class="no-margin">
+              <a class="slight-bold">Abstract:</a>
+              Diffusion-based generative models generate samples by mapping noise to data via the reversal of a
+              diffusion process that typically consists of independent Gaussian noise in every data coordinate. This
+              diffusion process is, however, not well suited to the fundamental task of molecular conformer generation
+              where the degrees of freedom differentiating conformers lie mostly in torsion angles. We, therefore,
+              propose Torsional Diffusion that generates conformers by leveraging the definition of a diffusion process
+              over the space T^m, a high dimensional torus representing torsion angles, and a SE(3)-equivariant model
+              capable of accurately predicting the score over this process. Empirically, we demonstrate that our model
+              outperforms state-of-the-art methods in terms of both diversity and precision of generated conformers,
+              reducing the mean minimum RMSD by respectively 31% and 17%. When compared to Gaussian diffusion models,
+              torsional diffusion enables significantly more accurate generation while performing two orders of
+              magnitude fewer inference time-steps.
+
+            </p>
+            </div>
+          </div>
+
+          <hr ngClass.gt-sm="separator" ngClass.lt-md="separator--small">
 
           <div class="item" fxLayout="column">
             <div fxLayout="row">
