correct reading groupd day

--- a/src/app/reading-group/reading-group.component.html
+++ b/src/app/reading-group/reading-group.component.html
@@ -30,7 +30,7 @@
                target="_blank">Zoom Link</a>
           </p>
           <div class="next-to-button">
-            Just hop on! We meet every Tuesday at 5pm CEST / 3pm UTC / 11am EDT / 8am PDT.
+            Just hop on! We meet every Monday at 11am EDT / 3pm UTC / 5pm CEST / 8am PDT.
           </div>
         </div>
 
@@ -436,7 +436,7 @@
               <div>
                 <a>
                   <fa-icon ngClass.gt-md="icon-right-margin--left" [icon]="authors"></fa-icon>
-                  Ilyes Batatia, Dávid Péter Kovács, Gregor N. C. Simm, Christoph Ortner, Gábor Csányi
+                  Priyank Jaini, Lars Holdijk, Max Welling
                 </a>
               </div>
             </div>
