--- a/src/app/reading-group/reading-group.component.html
+++ b/src/app/reading-group/reading-group.component.html
@@ -37,7 +37,7 @@
         <div fxLayout="row" fxLayoutAlign="left center">
           <p>
             <a mat-button class="group-button item-title"
-               href="https://join.slack.com/t/logag/shared_invite/zt-u0mbo1ec-zElmvd1oSCXGjXvxLSokvg"
+               href="https://join.slack.com/t/logag/shared_invite/zt-1hcqybjyd-ty5Pbj~BQy~W4B4mQQVxDQ"
                target="_blank">Join Slack!</a>
           </p>
           <div class="next-to-button">
