--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -78,7 +78,9 @@
           <div fxFlex="60">
             <div fxFlex.lt-md="" fxFlex="70" class="underline-title" fxLayout="column"
                  fxLayoutAlign.lt-md="center center">
-              <h1 class="left-titles--hidden">.</h1>
+
+              <h1 class="left-titles">(all papers: <a href="https://scholar.google.com/citations?user=bnXfJdEAAAAJ" target="_blank"
+               class="socials-links link-style-black text-black"><fa-icon class="link-icon-style-green" [icon]="Gscholar"></fa-icon></a>)</h1>
             </div>
           </div>
         </div>
@@ -86,7 +88,8 @@
 
       <div fxHide.gt-sm ngClass.sm="small-margin" ngClass.xs="small-margin--xs" class="underline-title"
            fxLayoutAlign="center center">
-        <h1 class="left-titles">MAIN PAPERS</h1>
+        <h1 class="left-titles">MAIN PAPERS (all papers: <a href="https://scholar.google.com/citations?user=bnXfJdEAAAAJ" target="_blank"
+               class="socials-links link-style-black text-black"><fa-icon class="link-icon-style-green" [icon]="Gscholar"></fa-icon></a>)</h1>
       </div>
 
       <div ngClass.sm="small-margin" ngClass.xs="small-margin--xs" fxLayout="row" fxLayout.lt-md="column"
@@ -97,7 +100,7 @@
         <div fxFlex="60">
           <div class="text-area" fxFlex.lt-md="" fxFlex="70" fxLayout="column" fxLayoutAlign.lt-md="center center">
 
-            
+
             <div class="item" fxLayout="column" fxLayoutAlign.lt-md="center center">
 
               <div fxLayout="row">
