--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -13,11 +13,11 @@
         -->
         <div class="item" fxLayout="column" fxLayoutAlign.lt-md="center center">
           <p class="text-align-left">
-            I am a first-year PhD student at MIT in the CS and AI Laboratory (CSAIL) co-advised by <a href="http://people.csail.mit.edu/tommi/" target="_blank"
+            I am a second-year PhD student at MIT in the CS and AI Laboratory (CSAIL) co-advised by <a href="http://people.csail.mit.edu/tommi/" target="_blank"
                      class="link-style-green">Tommi Jaakkola</a> and <a
             href="https://www.regina.csail.mit.edu/" target="_blank" class="link-style-green">Regina Barzilay</a>.
             <br>
-            I work on <b>geometric deep learning</b> and physics-inspired ML and applications in <b>molecular biology</b> and other physical systems.
+            I work on <b>generative models</b> and physics-inspired ML applied to <b>molecular biology</b>. E.g. Diffusion Models, Flow matching, molecular docking, Boltzmann sampling, ...
             <br>
             <br>
             Previously, I obtained my M.Sc. Informatics from Technical University of Munich where I wrote my thesis with <a class="item-subtitle link-style-black"
@@ -115,7 +115,7 @@
                 Gabriele Corso*, <b>Hannes Stärk*</b>, Bowen Jing*, Regina Barzilay, Tommi Jaakkola
               </p>
               <p class="item-content">
-                <i>Under review. </i>
+                <i>ICLR 2023. Also Spotlight at NeurIPS 2022 Score-Based Methods Workshop </i>
               </p>
               <div fxLayout="column" fxLayoutGap="5px">
                 <div fxLayout="row" fxLayoutGap="5px" fxLayoutAlign="center center">
@@ -667,15 +667,7 @@
                 <p class="item-content">
                   I developed a new attention mechanism and architecture for predicting proteins' subcellular location
                   beating the previous state-of-the-art by 5 percentage points.
-                  I wrote up the results in a paper that is currently under anonymous review at ICML, but you can
-                  already
-                  look at the <a href="https://github.com/HannesStark/protein-localization" target="_blank"
-                                 class="link-style-green">code
-                  <fa-icon class="link-icon-style-green" [icon]="github"></fa-icon>
-                </a> and reproduce all the results.
-                  Besides that I evaluated different types of learned representations for proteins and what information
-                  is
-                  captured by Transformer's protein embeddings, which ultimately led to my method.
+                  The paper for this is published at OUP Bioinformatics Advances. Check my google scholar!
 
                 </p>
               </div>
@@ -1330,7 +1322,7 @@
               <div fxFlex="30" fxLayoutAlign="end start" fxLayoutAlign.lt-md="center center">
                 <div fxFlex.gt-sm="200px" fxFlex.lt-md="100" ngClass.gt-sm="underline-title" ngClass.lt-md=""
                      fxLayoutAlign.lt-md="center center">
-                  <h1 class="left-titles">Reviews</h1>
+                  <h1 class="left-titles">Reviewing</h1>
                 </div>
               </div>
               <div fxFlex="60">
@@ -1343,7 +1335,7 @@
           </div>
           <div fxHide.gt-sm ngClass.sm="small-margin" ngClass.xs="small-margin--xs" class="underline-title"
                fxLayoutAlign="center center">
-            <h1 class="left-titles">Reviews</h1>
+            <h1 class="left-titles">Reviewing</h1>
           </div>
           <div ngClass.sm="small-margin" ngClass.xs="small-margin--xs" fxLayout="row" fxLayout.lt-md="column"
                fxLayoutAlign.lt-md="center center"
@@ -1355,9 +1347,36 @@
                 <div class="item" fxLayout="column" fxLayoutAlign.lt-md="center center">
                   <p class="item-content">
                     <a class="item-subtitle link-style-black"
+                                                    href="https://neurips.cc/"
+                                                    target="_blank">
+                    NeurIPS 2023</a> 3-4 papers
+                  </p>
+                </div>
+
+                <div class="item" fxLayout="column" fxLayoutAlign.lt-md="center center">
+                  <p class="item-content">
+                    <a class="item-subtitle link-style-black"
+                                                    href="https://frontiers4lcd.github.io/"
+                                                    target="_blank">
+                    ICML 2023 New Frontiers in Learning, Control, and Dynamical Systems Workshop</a> 3 papers
+                  </p>
+                </div>
+
+                <div class="item" fxLayout="column" fxLayoutAlign.lt-md="center center">
+                  <p class="item-content">
+                    <a class="item-subtitle link-style-black"
+                                                    href="https://syns-ml.github.io/2023/"
+                                                    target="_blank">
+                    NeurIPS 2022 Synergy of Scientific and Machine Learning Modelling Workshop </a> 1 paper
+                  </p>
+                </div>
+
+                <div class="item" fxLayout="column" fxLayoutAlign.lt-md="center center">
+                  <p class="item-content">
+                    <a class="item-subtitle link-style-black"
                                                     href="https://ml4physicalsciences.github.io/2022/"
                                                     target="_blank">
-                    NeurIPS 2022 Machine Learning for the Physical Sciences</a> (Workshop): 2 papers
+                    NeurIPS 2022 Machine Learning for the Physical Sciences Workshop</a> 2 papers
                   </p>
                 </div>
                 <div class="item" fxLayout="column" fxLayoutAlign.lt-md="center center">
@@ -1382,7 +1401,7 @@
                     <a class="item-subtitle link-style-black"
                                                href="https://ml4health.github.io/2021/"
                                                target="_blank">
-                    2021 Machine Learning for Health</a> (Conference): 4 papers
+                    2021 Machine Learning for Health Conference</a>  4 papers
                   </p>
                 </div>
 
