add flowsite and change color

--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -103,6 +103,37 @@
 
             <div class="item" fxLayout="column" fxLayoutAlign.lt-md="center center">
 
+
+              <div fxLayout="row">
+                <h3>
+                  <a class="item-subtitle link-style-black"
+                     href="https://arxiv.org/abs/2310.05764"
+                     target="_blank">Harmonic Self-Conditioned Flow Matching for Multi-Ligand Docking and Binding Site Design</a></h3>
+              </div>
+
+              <p class="item-date-loc">
+                <fa-icon class="icon-right-margin" [icon]="authors"></fa-icon>
+                <b>Hannes Stärk*</b>, Bowen Jing, Regina Barzilay, Tommi Jaakkola
+              </p>
+              <p class="item-content">
+                <i>Under review.</i>
+              </p>
+              <div fxLayout="column" fxLayoutGap="5px">
+                <div fxLayout="row" fxLayoutGap="5px" fxLayoutAlign="center center">
+
+                  <img class="previewable-image2" fxFlex="60"
+                       src="assets/flowsite.png"
+                       alt="image at full size">
+                  <img class="previewable-image2" fxFlex="20"
+                       src="assets/flowvis.gif"
+                       alt="image at full size">
+                  <img class="previewable-image2" fxFlex="20"
+                       src="assets/flowsite_task.png"
+                       alt="image at full size">
+
+                </div>
+              </div>
+              <hr ngClass.gt-sm="separator-slim" ngClass.lt-md="separator-slim--small">
               <div fxLayout="row">
                 <h3>
                   <a class="item-subtitle link-style-black"
