--- a/theme.scss
+++ b/theme.scss
@@ -10,13 +10,13 @@ $green-palette: (
   50: #e8f5e9,
   100: #c8e6c9,
   200: #a5d6a7,
-  300: #81c784,
-  400: #66bb6a,
-  500: #4caf50,
-  600: #43a047,
-  700: #43a047,
-  800: #2e7d32,
-  900: #1b5e20,
+  300: #016fff,
+  400: #016fff,
+  500: #016fff,
+  600: #016fff,
+  700: #016fff,
+  800: #016fff,
+  900: #016fff,
   A100: #b9f6ca,
   A200: #69f0ae,
   A400: chocolate,
