--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -13,11 +13,11 @@
         -->
         <div class="item" fxLayout="column" fxLayoutAlign.lt-md="center center">
           <p class="text-align-left">
-            I am a <b>second-year PhD student at MIT</b> in CSAIL co-advised by <a href="http://people.csail.mit.edu/tommi/" target="_blank"
+            I am a <b>third-year PhD student at MIT</b> in CSAIL co-advised by <a href="http://people.csail.mit.edu/tommi/" target="_blank"
                      class="link-style-green">Tommi Jaakkola</a> and <a
-            href="https://www.regina.csail.mit.edu/" target="_blank" class="link-style-green">Regina Barzilay</a>.
+            href="https://www.rbg.mit.edu/" target="_blank" class="link-style-green">Regina Barzilay</a>.
             <br>
-            I work on ML for <b>molecules and biology</b> (docking, protein design and search, DNA design, molecular dynamics, and we all like enzymes... :)) using stuff like diffusion/flow models, protein language models, other generative models, equivariant architectures, ... - whatever we need I suppose.
+            I work on generative models for <b>biomolecules</b> (docking, protein design and search, DNA design, molecular dynamics, ...).
             <br>
             <br>
             Previously, I was at Technical University of Munich where I wrote my thesis with <a class="item-subtitle link-style-black"
