--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -98,9 +98,35 @@
         </div>
         <div fxFlex="60">
           <div class="text-area" fxFlex.lt-md="" fxFlex="70" fxLayout="column" fxLayoutAlign.lt-md="center center">
-
-
             <div class="item" fxLayout="column" fxLayoutAlign.lt-md="center center">
+
+              <div fxLayout="row">
+                <h3>
+                  <a class="item-subtitle link-style-black"
+                     href="https://arxiv.org/abs/2409.17808v1"
+                     target="_blank">Generative Modeling of Molecular Dynamics Trajectories</a></h3>
+              </div>
+
+              <p class="item-date-loc">
+                <fa-icon class="icon-right-margin" [icon]="authors"></fa-icon>
+                 Bowen Jing*, <b>Hannes Stärk*</b>, Tommi Jaakkola, Bonnie Berger
+              </p>
+              <p class="item-content">
+                <i>NeurIPS 2024; also selected at ICML 2024 ML4LMS as high-potential for commercial impact (by VCs).</i>
+              </p>
+              <div fxLayout="column" fxLayoutGap="5px">
+                <div fxLayout="row" fxLayoutGap="5px" fxLayoutAlign="center center">
+
+                  <img class="previewable-image2" fxFlex="75"
+                       src="assets/mdgen.png"
+                       alt="image at full size">
+                  <img class="previewable-image2" fxFlex="25"
+                       src="assets/mdgen_traj.gif"
+                       alt="image at full size">
+
+                </div>
+              </div>
+              <hr ngClass.gt-sm="separator-slim" ngClass.lt-md="separator-slim--small">
 
               <div fxLayout="row">
                 <h3>
