--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -13,9 +13,9 @@
       CV as PDF
     </a>
 
-    <a href="https://m2d2.io/talks/logg/about/" target="_blank" #tooltip="matTooltip"
+    <a href="https://portal.valencelabs.com/starklyspeaking" target="_blank" #tooltip="matTooltip"
        mat-button
-       matTooltip="My Learning on Graphs and Geometry Reading Group"
+       matTooltip="The Starkly Speaking reading group."
        class="mat-button">
       My Reading Group
     </a>
