--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -13,20 +13,19 @@
         -->
         <div class="item" fxLayout="column" fxLayoutAlign.lt-md="center center">
           <p class="text-align-left">
-            I am a <b>third-year PhD student at MIT</b> in CSAIL co-advised by <a href="http://people.csail.mit.edu/tommi/" target="_blank"
+            I am a <b>4th-year PhD student at MIT</b> in CSAIL co-advised by <a href="http://people.csail.mit.edu/tommi/" target="_blank"
                      class="link-style-green">Tommi Jaakkola</a> and <a
             href="https://www.rbg.mit.edu/" target="_blank" class="link-style-green">Regina Barzilay</a>.
             <br>
-            I work on generative models for <b>biomolecules</b> (docking, protein design and search, DNA design, molecular dynamics, ...).
+            I work on generative models for <b>biomolecules</b> (structure prediction, biomolecular design, molecular dynamics, ...).
             <br>
             <br>
             Previously, I was at Technical University of Munich where I wrote my thesis with <a class="item-subtitle link-style-black"
                                                                       href="https://www.professoren.tum.de/en/guennemann-stephan"
-                                                                      target="_blank">Stephan Günnemann</a> and <a class="item-subtitle link-style-black" href="https://www.cl.cam.ac.uk/~pl219/" target="_blank">Pietro Liò</a> <3.
+                                                                      target="_blank">Stephan Günnemann</a> and <a class="item-subtitle link-style-black" href="https://www.cl.cam.ac.uk/~pl219/" target="_blank">Pietro Liò</a>.
             <br>
             <br>
-            Consider joining my weekly <a href="https://portal.valencelabs.com/logg" target="_blank" class="link-style-green">reading
-            group</a>. Together with the paper authors, we cover a paper every Monday about whatever I am interested in at the moment. So something like  ML for bio, molecular dynamics, diffusion/flows, other generative models, protein design, ...
+            Consider joining my <a href="https://portal.valencelabs.com/starklyspeaking" target="_blank" class="link-style-green">Starkly Speaking</a> reading group. Together with the paper authors, we cover a paper every Monday about whatever I am interested in at the moment. So something like  ML for bio, molecular dynamics, diffusion, other generative models, protein design, ...
           </p>
 
           <div fxLayout="row" fxLayout.xs="column">
@@ -103,6 +102,35 @@
               <div fxLayout="row">
                 <h3>
                   <a class="item-subtitle link-style-black"
+                     href="https://arxiv.org/abs/2503.05025"
+                     target="_blank">ProtComposer: Compositional Protein Structure Generation with 3D Ellipsoids
+</a></h3>
+              </div>
+
+              <p class="item-date-loc">
+                <fa-icon class="icon-right-margin" [icon]="authors"></fa-icon>
+                 <b>Hannes Stärk*</b>, Bowen Jing*, Tomas Geffner, Jason Yim, Tommi Jaakkola, Arash Vahdat, Karsten Kreis
+              </p>
+              <p class="item-content">
+                <i>Oral at ICLR 2025.</i> <a  class="icon-right-margin-color"> In the best reviewed 0.7% of papers.</a>
+              </p>
+              <div fxLayout="column" fxLayoutGap="5px">
+                <div fxLayout="row" fxLayoutGap="5px" fxLayoutAlign="center center">
+
+                  <img class="previewable-image2" fxFlex="65"
+                       src="assets/protcomposer.png"
+                       alt="image at full size">
+                  <img class="previewable-image2" fxFlex="35"
+                       src="assets/protcomposer.gif"
+                       alt="image at full size">
+
+                </div>
+              </div>
+              <hr ngClass.gt-sm="separator-slim" ngClass.lt-md="separator-slim--small">
+
+              <div fxLayout="row">
+                <h3>
+                  <a class="item-subtitle link-style-black"
                      href="https://arxiv.org/abs/2409.17808v1"
                      target="_blank">Generative Modeling of Molecular Dynamics Trajectories</a></h3>
               </div>
@@ -112,7 +140,7 @@
                  Bowen Jing*, <b>Hannes Stärk*</b>, Tommi Jaakkola, Bonnie Berger
               </p>
               <p class="item-content">
-                <i>NeurIPS 2024; also selected at ICML 2024 ML4LMS as high-potential for commercial impact (by VCs).</i>
+                <i>NeurIPS 2024.</i>
               </p>
               <div fxLayout="column" fxLayoutGap="5px">
                 <div fxLayout="row" fxLayoutGap="5px" fxLayoutAlign="center center">
